fix(): fix comments swagger && create Virtual/AlbumResource
